simpleApp/definition.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mycurlpod
  labels:
    app: curl
spec:
  containers:
  - name: mycurlcontainer
    image: curlimages/curl
    command: ["sh"]
    stdin: true
    tty: true
    resources:
      requests:
        memory: "128Mi"
        cpu: "50m"
      limits:
        memory: "256Mi"
        cpu: "100m"
