simpleApp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleapp
  namespace: cdc-simpleapp-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: simpleapp
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: simpleapp
        image: ghcr.io/vanessa-ivanov/simpleApp:latest
        ports:
          -containerPort: 8080
        resources:
          requests:
            memory: 300Mi
            cpu: 200m
          limits:
            memory: 600Mi
            cpu: 500m
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 60
          timeoutSeconds: 10
