simpleApp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpleapp
spec:
  selector:
    app.kubernetes.io/name: simpleapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
